perf(CRUD): 重构CRUD启动器，优化代码结构